<resources>
    <string name="app_name">DriverFit</string>

    <!-- Onboarding -->
    <string name="get_started">Get Started</string>
    <string name="title_onboarding">DriverFit</string>
    <string name="description_onboarding">DriverFit adalah aplikasi yang dapat membantu anda untuk mengetahui kondisi anda sebelum berkendara</string>

    <!-- Auth -->
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="welcome">WELCOME TO DRIVERFIT</string>
    <string name="login">Login</string>
    <string name="email_string">Email</string>
    <string name="password_string">Masukan Password</string>
    <string name="forgot_password_string">Lupa Password?</string>
    <string name="daftar">Daftar</string>
    <string name="nama_string">Nama Lengkap</string>
    <string name="nohp_string">No HP</string>
    <string name="belum_punya_akun">Belum Punya Akun? Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun? Masuk</string>
    <string name="login_dengan_nomor_telepon">Log in dengan no. handphone</string>
    <string name="register">Daftar DriverFit</string>

    <!-- Home -->
    <string name="time_access"> | 1 Des 2023 17.30</string>
    <string name="tv_welcome_user">Halo, </string>
    <string name="intro_homescreen">Siap berkendara hari ini?</string>

    <!-- Profile -->
    <string name="profile_name_placeholder">Anonymous</string>

    <!-- Camera -->
    <string name="loading">Loading</string>

    <!-- Setting -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Pengaturan</string>
    <string name="log_out">Keluar</string>
    <string name="theme_setting">Tema</string>
    <string name="light_mode">Terang</string>
    <string name="dark_mode">Gelap</string>
    <string name="system_mode">Bawaan Sistem</string>
    <string name="choose_theme">Pilih Tema</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Beranda</string>
    <string name="title_dectection">Deteksi</string>
    <string name="title_profile">Profil</string>

    <!-- Error -->
    <string name="error_name_is_required">Nama harus diisi</string>
    <string name="error_name_min_char">Jumlah karakter minimum adalah 3</string>
    <string name="error_name_max_char">Jumlah karakter maksimal 50</string>
    <string name="error_invalid_email">Email tidak valid</string>
    <string name="error_email_is_required">Email harus diisi</string>
    <string name="error_password_is_required">Password harus diisi</string>
    <string name="error_password_min_char">Jumlah karakter minimum adalah 8</string>
    <string name="error_password_max_char">Jumlah karakter maksimal adalah 50</string>
    <string name="error_password_not_match">Password tidak cocok</string>

    <!-- Content Description -->
    <string name="cd_camera">Camera</string>
    <string name="cd_gallery">Gallery</string>
    <string name="cd_switch">Switch Camera</string>
    <string name="cd_article_image">example of an image of an article</string>

    <string name="tb_deteksi">Deteksi Wajah</string>
    <string name="check_loaction">Cek Lokasi</string>
    <string name="retake">Ambil Ulang Gambar</string>
    <string name="find_place">take a break</string>

    <!-- Article Details-->
    <string name="title_of_article">Tips Menghilangkan Rasa Kantuk</string>
    <string name="article_title">Judul Artikel</string>
    <string name="article_description">Ngantuk saat berkendara dapat menjadi risiko serius bagi keselamatan. Artikel ini akan membahas beberapa strategi efektif untuk mengatasi rasa ngantuk dan menjaga kewaspadaan selama perjalanan.</string>


</resources>