<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.ac.unri.driverfit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_detection"
        android:name="id.ac.unri.driverfit.ui.detection.DetectionFragment"
        android:label="@string/title_dectection"
        tools:layout="@layout/fragment_detection" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="id.ac.unri.driverfit.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_settingFragment"
            app:destination="@id/settingFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="id.ac.unri.driverfit.ui.setting.SettingFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>