<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="Loading"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="16dp">

        <ImageButton
            android:id="@+id/gallery_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/baseline_add_photo_alternate"
            android:contentDescription="@string/cd_gallery" />

        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="46dp"
            android:background="@drawable/baseline_photo_camera_24"
            android:contentDescription="@string/cd_camera" />

        <ImageButton
            android:id="@+id/switch_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/baseline_cameraswitch"
            android:contentDescription="@string/cd_switch" />
    </LinearLayout>
</LinearLayout>